test/types/integral/integralvariable.good
integralvariable.chpl:1: error: Variables can't be declared using abstract generic types like 'integral'
