test/types/integral/integralvariable.chpl
var r: integral = 3;
writeln(r);
